# a2a-mcp-bridge

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  oss-compliance.yml
docs/: ARCHITECTURE.md
integrations/: README.md
integrations/claude/: .mcp.json  README.md
integrations/claude/skills/a2a-mcp-bridge/: SKILL.md
integrations/codex/: config.toml
integrations/opencode/: opencode.json
src/a2a_mcp_bridge/: __init__.py  a2a_client.py  config.py  demo.py  launcher.py  mcp_facade.py
src/a2a_mcp_bridge/agents/: __init__.py  a2a_common.py  analyst.py  llm_loop.py  mcp_client.py  researcher.py
src/a2a_mcp_bridge/mcp_servers/: __init__.py  analysis_tools.py  corpus.py  research_tools.py
src/a2a_mcp_bridge/providers/: __init__.py  anthropic_api.py  anthropic_base.py  base.py  factory.py  mock.py  vertex.py
tests/: test_cli.py  test_end_to_end.py  test_facade.py  test_mcp_servers.py  test_providers.py
